--- a/style.css
+++ b/style.css
@@ -20,3 +20,17 @@ header{
    color: white;
    border-radius: 5px;
 }
+.section2{
+    display: flex;
+    padding: 100px 20px 50px 20px;
+    
+    
+}
+.half-width{
+    width: 50%;
+    padding-left: 5%;
+}
+.half-width img{
+    width: 100%;
+    border-radius: 5px;
+}
